# Zenlp

./: License  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
docs/: new_word_discoverer.md
tests/discoverer/: test_discoverer.py
zenlp/: __init__.py
zenlp/discovery/: discoverer.py
